<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/scrollView"
    android:background="#242b32">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:baselineAligned="false"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Menu"
            android:id="@+id/appName"
            android:layout_gravity="center_horizontal"
            android:textSize="40sp"
            android:layout_marginTop="0dp"
            android:textStyle="bold"
            android:textColor="#f16c20"
            android:alpha="50"
            android:autoText="false" />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:cropToPadding="false"
            android:id="@+id/image"
            android:adjustViewBounds="false"
            android:background="@drawable/icon" />


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:showDividers="middle"
            android:divider="@drawable/function_divider_height"
            android:orientation="vertical">
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/calculate"
                android:id="@+id/startCalculator"
                android:onClick="startCalculator"
                android:width="200dp"
                android:textColor="#ffffff"
                android:cursorVisible="false"
                android:contextClickable="false"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:background="@drawable/menu_button" />
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting"
                android:id="@+id/setting"
                android:onClick="startSetting"
                android:textColor="#ffffff"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:width="200dp"
                android:background="@drawable/menu_button" />
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/exit"
                android:id="@+id/exit"
                android:onClick="exit"
                android:textColor="#ffffff"
                android:background="@drawable/menu_button"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:width="200dp" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>